--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,7 +27,7 @@ jobs:
         uses: avides/actions-action-configuration-autoupdate@v1.3.0
         with:
           token: ${{ secrets.PAT }}
-          actions-configuration-files: config-injection-test/src/main/resources/application.yml
+          actions-configuration-files: "./src/main/resources/application.yml"
           source-repository: "https://github.com/geneaky/BookChat-Config/tree/master/src/test/resources"
           
       - name: check
